# cocoabots

./: README.md  colordetec.cpp  colordetec.h  main.cpp  makefile  servotest.cpp  staffgyro.cpp  ultrasonic_test.cpp
backupSrc/: cocoabot.h  sensorsdef.cpp
camera_calibration/: #take_images.cpp#  #temp.txt#  CMakeCache.txt  CMakeLists.txt~  Makefile  VID5.xml  VID5.xml~  camera_calibration  camera_calibration.cpp  cmake_install.cmake  data_pt2.mat  data_pt3.mat  data_pt4.mat  data_pt_final.mat  data_pt_final111.mat  data_pt_final2.mat  data_pt_final222.mat  data_pt_final223.mat  data_pt_final224.mat  data_pt_final225.mat  data_pts.mat  default.xml  default.xml~  in_VID5.xml~  (+17 more)
camera_calibration/fresh/: CMakeCache.txt  CMakeLists.txt  Makefile  VID5.xml  VID5.xml~  camera_calibration  cmake_install.cmake  cvtCoords.m  data_pts.mat  default.xml  default.xml~  reconstruct2d.m  reconstruct2d_inv.m  script.m  take_images  take_images.cpp  take_images.cpp~
camera_calibration/fresh/cam_mat_calibration/: out_camera_data.xml  out_camera_data_no_distortion.xml
camera_calibration/fresh/color_data/: color_analysis_useapp.m  color_analysis_useapp.m~  mask_func.m  mask_func_mult.m  mask_func_mult_hsv.m  white_line_meta.mat  yellow_line_meta.mat
camera_calibration/fresh/color_data/blue_line/: blue_line_meta.mat
camera_calibration/fresh/color_data/green_blocks/: green_block_meta.mat
camera_calibration/fresh/color_data/purple_line/: purple_line_meta.mat
camera_calibration/fresh/color_data/red_blocks/: from_app.mat
camera_calibration/fresh/old_camera/: out_camera_data.xml
(+267 files in other folders)
